--- a/admin/app/views/contest_entry_add.scala.html
+++ b/admin/app/views/contest_entry_add.scala.html
@@ -1,4 +1,4 @@
-@(contestEntryForm: Form[controllers.admin.ContestEntryForm], match_events: List[model.TemplateMatchEvent])
+@(contestEntryForm: Form[controllers.admin.ContestEntryForm], match_events: List[model.MatchEvent])
 
 @import helper._
 @import helper.twitterBootstrap._
