--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -1,4 +1,4 @@
-@(match_event: model.TemplateMatchEvent)
+@(match_event: model.TemplateMatchEvent, templateSoccerTeamMap: HashMap[org.bson.types.ObjectId, model.TemplateSoccerTeam])
 
 @import controllers.admin.routes._
 
