--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -1,4 +1,4 @@
-@(match_events: List[model.TemplateMatchEvent])
+@(match_events: List[model.TemplateMatchEvent], templateSoccerTeamMap: HashMap[org.bson.types.ObjectId, model.TemplateSoccerTeam])
 
 @import model._
 @import controllers.admin.routes._
@@ -43,6 +43,7 @@
             <th>OptaId</th>
             <th>OptaTeamAId</th>
             <th>OptaTeamBId</th>
+            <th>Teams</th>
             <th>Start Date</th>
             <th>State</th>
         </tr>
@@ -54,17 +55,15 @@
             <td>@p.optaMatchEventId</td>
             <td>@p.optaTeamAId</td>
             <td>@p.optaTeamBId</td>
-            @{/*
             <td>
-                <a href="@TemplateMatchEventController.show(p.templateMatchEventId.toString())">
-                @if(p.isStarted()) {
-                    @p.soccerTeamA.name (@p.getFantasyPoints(p.soccerTeamA)) vS @p.soccerTeamB.name (@p.getFantasyPoints(p.soccerTeamB))
-                } else {
-                    @p.soccerTeamA.name vS @p.soccerTeamB.name
-                }
+                <a href="@TemplateSoccerTeamController.show(p.templateSoccerTeamAId.toString())">
+                    @templateSoccerTeamMap(p.templateSoccerTeamAId).name
+                </a>
+                vs
+                <a href="@TemplateSoccerTeamController.show(p.templateSoccerTeamBId.toString())">
+                    @templateSoccerTeamMap(p.templateSoccerTeamBId).name
                 </a>
             </td>
-            */}
             <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
             <td>@match_event_state(p.templateMatchEventId.toString())</td>
         </tr>
