--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -64,7 +64,7 @@
                     @templateSoccerTeamMap(p.templateSoccerTeamBId).name
                 </a>
             </td>
-            <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
+            <td>@GlobalDate.formatDate(p.startDate)</td>
             <td>@match_event_state(p.templateMatchEventId.toString())</td>
         </tr>
         }
