--- a/admin/app/views/match_event_list.scala.html
+++ b/admin/app/views/match_event_list.scala.html
@@ -24,14 +24,14 @@
     </script>
 }
 
-@match_event_state(match_event_id : String) = {
-    @if(TemplateMatchEvent.isFinished(match_event_id)) {
-        <button class="btn btn-danger state_match_event" value="@match_event_id">Finished</button>
+@match_event_state(match_event : model.MatchEvent) = {
+    @if(match_event.isFinished()) {
+        <button class="btn btn-danger state_match_event">Finished</button>
     } else {
-        @if(TemplateMatchEvent.isStarted(match_event_id)) {
-            <button class="btn btn-success state_match_event" value="@match_event_id">Live</button>
+        @if(match_event.isStarted()) {
+            <button class="btn btn-success state_match_event">Live</button>
         } else {
-            <button class="btn btn-warning state_match_event" value="@match_event_id">Waiting</button>
+            <button class="btn btn-warning state_match_event">Waiting</button>
         }
     }
 }
@@ -70,7 +70,7 @@
                     }
                 </a></td>
             <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
-            <td>@match_event_state(p.templateMatchEventId.toString())</td>
+            <td>@match_event_state(p)</td>
         </tr>
         }
         </tbody>
