Dates correctly in templates

--- a/admin/app/views/match_event_list.scala.html
+++ b/admin/app/views/match_event_list.scala.html
@@ -69,7 +69,7 @@
                         @p.soccerTeamA.name vS @p.soccerTeamB.name
                     }
                 </a></td>
-            <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
+            <td>@GlobalDate.format(p.startDate)</td>
             <td>@match_event_state(p)</td>
         </tr>
         }
