GlobalDate.formatDates in templates

--- a/admin/app/views/opta_match_event_list.scala.html
+++ b/admin/app/views/opta_match_event_list.scala.html
@@ -33,10 +33,10 @@
             <td>@p.seasonName</td>
             <td>@p.homeTeamId</td>
             <td>@p.awayTeamId</td>
-            <td>@GlobalDate.format(p.matchDate)</td>
+            <td>@GlobalDate.formatDate(p.matchDate)</td>
             <td>@p.timeZone</td>
         @if(p.lastModified != null) {
-            <td>@p.lastModified.format("yyyy/MM/dd HH:mm:ss")</td>
+            <td>@GlobalDate.formatDate(p.lastModified)</td>
         } else {
             <td></td>
         }
