--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -48,7 +48,7 @@
                     @templateSoccerTeamMap(p.templateSoccerTeamBId).name
                 </a>
             </td>
-          <td>@GlobalDate.format(p.startDate)</td>
+          <td>@GlobalDate.formatDate(p.startDate)</td>
             <td>@match_event_state(p)</td>
         </tr>
         }
