--- a/admin/app/views/match_event_list.scala.html
+++ b/admin/app/views/match_event_list.scala.html
@@ -69,7 +69,7 @@
                         @p.soccerTeamA.name vS @p.soccerTeamB.name
                     }
                 </a></td>
-            <td>@GlobalDate.format(p.startDate)</td>
+            <td>@GlobalDate.formatDate(p.startDate)</td>
             <td>@match_event_state(p)</td>
         </tr>
         }
