Missing import GlobalDate in templates

--- a/admin/app/views/opta_match_event_list.scala.html
+++ b/admin/app/views/opta_match_event_list.scala.html
@@ -1,6 +1,7 @@
 @(match_events: List[model.opta.OptaMatchEvent])
 
 @import controllers.admin.routes._
+@import model.GlobalDate
 
 @main("Opta Match Events - Admin") {
 
