--- a/admin/app/views/player_fantasy_points.scala.html
+++ b/admin/app/views/player_fantasy_points.scala.html
@@ -42,6 +42,7 @@
     <table id="table_id" class="table table-striped">
         <thead>
         <tr>
+            <th>Type</th>
             <th>TypeId</th>
             <th>Points</th>
             <th>OptaPlayerId</th>
@@ -58,6 +59,7 @@
         @for(p <- opta_events) {
         <tr>
             <td>@OptaEventType.getEnum(p.typeId).name()</td>
+            <td>@p.typeId</td>
             <td>@p.points</td>
             <td>@p.optaPlayerId</td>
             <td>@p.competitionId</td>
