MatchEvent: period && optaEvents

--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -137,7 +137,8 @@
         $(document).ready( function () {
 //            console.log( "DataTable init" );
             $('#table_id').dataTable( {
-                stateSave: true
+                stateSave: true,
+                iDisplayLength: 100
             } );
         } );
 </script>
