fix matchEvent: OptaEvent

--- a/admin/app/views/match_event_opta_events_list.scala.html
+++ b/admin/app/views/match_event_opta_events_list.scala.html
@@ -34,7 +34,7 @@
             <td>@playerInfoMap(p.optaPlayerId)</td>
             <td>@playerInfoMap(p.optaPlayerId+"-team")</td>
             } else {
-            <td>p.optaPlayerId</td>
+            <td>@p.optaPlayerId</td>
             <td>???</td>
             }
             <td>@OptaEventType.getEnum(p.typeId).name()</td>
