Simulator vuelve a funcionar sin snapshots

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -10,9 +10,9 @@
     <a class="btn btn-primary" href="@SnapshotController.importSalaries" title="Import Players' salaries from a CSV file.">
         Import Salaries
     </a>
-    <a href="@ImportController.showImportTeams"><button class="btn btn-warning">Import Teams...</button></a>
-    <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import Soccers...</button></a>
-    <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents...</button></a>
+    <a href="@ImportController.showImportTeams"><button class="btn btn-warning">Import Teams</button></a>
+    <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import SoccerPlayers</button></a>
+    <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
 </div>
 <br/>
 <br/>
